force-app/main/default/objects/ReceivedDocument__c/ReceivedDocument__c.object-meta.xml
<CustomObject>
    <label>Documento recebido</label>
    <nameField>
        <label>Nome de Documento recebido</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos recebidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>