force-app/main/default/objects/ReceivedDocument__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atribuído a</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documentos_recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>