force-app/main/default/objects/ReceivedDocument__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documentos recebidos</relationshipLabel>
    <relationshipName>Documentos_recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>