force-app/main/default/objects/ReceivedDocument__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Documentos recebidos</relationshipLabel>
    <relationshipName>Documentos_recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>