force-app/main/default/objects/ReceivedDocument__c/fields/FS_RequestJustification__c.field-meta.xml
<CustomField>
    <fullName>FS_RequestJustification__c</fullName>
    <label>Justificativa da solicitação</label>
    <type>TextArea</type>
</CustomField>