force-app/main/default/objects/ReceivedDocument__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Documentos recebidos</relationshipLabel>
    <relationshipName>Documentos_recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>