force-app/main/default/objects/ReceivedDocument__c/fields/PurchaseSaleContract__c.field-meta.xml
<CustomField>
    <fullName>PurchaseSaleContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Compra e Venda</label>
    <referenceTo>PurchaseSaleContract__c</referenceTo>
    <relationshipLabel>Documentos recebidos</relationshipLabel>
    <relationshipName>Documentos_recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>