force-app/main/default/objects/ReceivedDocument__c/fields/ReceivedDocument__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDocument__c</fullName>
    <label>Documento solicitado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosNecessarios</valueSetName>
    </valueSet>
</CustomField>