force-app/main/default/objects/ReceivedDocument__c/fields/RequestedDocumentFor__c.field-meta.xml
<CustomField>
    <fullName>RequestedDocumentFor__c</fullName>
    <label>Documento solicitado para</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Vendedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>