force-app/main/default/objects/ReceivedDocument__c/recordTypes/ForSale.recordType-meta.xml
<RecordType>
    <fullName>ForSale</fullName>
    <active>true</active>
    <label>ForSale</label>
</RecordType>