force-app/main/default/objects/ReceivedDocument__c/validationRules/BloquearDocumentoSolicitadoEditar.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearDocumentoSolicitadoEditar</fullName>
    <active>true</active>
    <description>Impede a alteração do campo Documento solicitado após a criação do registro.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED( ReceivedDocument__c )
)</errorConditionFormula>
    <errorMessage>O campo &quot;Documento solicitado&quot; não pode ser alterado após a criação do registro.</errorMessage>
</ValidationRule>