force-app/main/default/objects/ReceivedDocument__c/validationRules/BloquearDocumentoSolicitadoParaEditar.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearDocumentoSolicitadoParaEditar</fullName>
    <active>true</active>
    <description>Impede a alteração do campo Documento solicitado para após a criação do registro.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED( RequestedDocumentFor__c )
)</errorConditionFormula>
    <errorMessage>O campo &quot;Documento solicitado para&quot; não pode ser alterado após a criação do registro.</errorMessage>
</ValidationRule>