force-app/main/default/objects/ReceivedDocument__c/validationRules/BloquearJustificativaDaSolicitacaoEditar.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearJustificativaDaSolicitacaoEditar</fullName>
    <active>true</active>
    <description>Impede a alteração do campo Justificativa da solicitação para após a criação do registro.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED( FS_RequestJustification__c )
)</errorConditionFormula>
    <errorMessage>O campo &quot;Justificativa da solicitação&quot; não pode ser alterado após a criação do registro.</errorMessage>
</ValidationRule>